@@ -205,6 +205,17 @@ Queue
 --- Functionality changes from Asterisk 13.7.0 to Asterisk 13.8.0 ------------
 ------------------------------------------------------------------------------
 
+app_confbridge
+------------------
+ * Added CONFBRIDGE_INFO(muted,) for querying the muted conference state.
+
+ * Added Muted header to AMI ConfbridgeListRooms action response list events
+   to indicate the muted conference state.
+
+ * Added Muted column to CLI "confbridge list" output to indicate the muted
+   conference state and made the locked column a yes/no value instead of a
+   locked/unlocked value.
+
 res_pjproject
 ------------------
  * This module is the successor of res_pjsip_log_forwarder.  As well as
@@ -215,7 +226,6 @@ res_pjproject
 
 res_pjsip
 ------------------
-
  * Added new global option (regcontext) to pjsip. When set, Asterisk will
    dynamically create and destroy a NoOp priority 1 extension
    for a given endpoint who registers or unregisters with us.
